# micrograd-rs

./: Cargo.toml  README.md
src/: autograd.rs  lib.rs  main.rs  math.rs  nn.rs  plotting.rs
